--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -62,8 +62,11 @@
 
 /* docking */
 
-    $chatWidth: 30%;
+    $chatWidth: 530px;
     $chatWidthMobile: 100%;
+
+    $avatarWidth: 38px;
+    $fromBotMargin: 8px;
 
     .wc-hidden {
         visibility: hidden;
@@ -110,7 +113,7 @@
         right: 0;
         top: 0;
         z-index: 1;
-        max-width: 100%;
+        max-width: $chatWidth;
         display: flex;
         line-height: 1.2em;
 
@@ -235,7 +238,7 @@
         right: 0;
         top: $headerTotalHeight;
         transition: transform $actionTransition;
-        max-width: 100%;
+        max-width: $chatWidth;
         @include mobileAndTablet {
             max-width: $chatWidthMobile; 
             // max-width: 100%;
@@ -634,7 +637,7 @@
         animation: animationFrames 2s;
         animation-iteration-count: 1;
         clear: both;
-        margin-bottom: 8px;
+        margin-bottom: 5px;
         overflow: hidden;
         position: relative;
         /*transition: max-height 2s ease-in-out;*/
@@ -663,15 +666,15 @@
     }
 
     .wc-message-avatar{
-        width: 38px;
-        height: 38px;
+        width: $avatarWidth;
+        height: $avatarWidth;
         min-width: 25px;
         border-radius: 22px;
         display: flex;
         align-items: center;
         justify-content: center;
         color: #f6f7f8;
-        margin: auto 0 6px 0;
+        margin: auto 0 16px 0;
         background: #3F6DE1;
     }
 
@@ -821,8 +824,6 @@
             margin-left: auto;
             border: none;
             width: $gideon-node-width;
-            margin-top: 30px;
-            margin-bottom: 30px;
         }
 
         .wc-message-content-node {
@@ -1211,7 +1212,7 @@
     .wc-message-from-me {
         float: right;
         margin-right: 6px;
-        // margin-left: auto;
+        margin-left: 46px;
     }
 
     .wc-message-from-me.wc-message-from {
@@ -1233,6 +1234,7 @@
 
     .wc-message-from-me {
       background-color:white;
+      margin-left: $avatarWidth + $fromBotMargin;
     //   border-top: 5px solid #3f6de1;
     }
 
@@ -1356,7 +1358,7 @@
 
     .wc-message-from-bot {
         float: left;
-        margin-left: 8px;
+        margin-left: $fromBotMargin;
         max-width: 75%;
     }
 
@@ -1382,8 +1384,6 @@
       margin-left: auto;
       border: none;
       width: $gideon-node-width;
-      margin-top: 50px;
-      margin-bottom: 50px;
     }
 
     .wc-message-imBack {
@@ -1460,7 +1460,7 @@
         box-sizing: border-box;
         background: white;
         height: $consoleHeight;
-        max-width: 100%;
+        max-width: $chatWidth;
         left: 0;
         // width: 66%;
         position: absolute;
