--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -76,20 +76,12 @@ $gd_gideon_blue: #3F6DE1;
 .uploaded-file-name-readonly {
   margin-top: 20px;
   color: #262626;
-  text-decoration: underline;
 }
 
 .uploaded-file-name-readonly-link {
   margin-top: 20px;
-  color: #262626;
-}
-
-.uploaded-file-name-readonly-link a:link {
-  color: #262626;
-}
-
-a:link {
-  color: #262626;
+  color: blue !important;
+  text-decoration: underline;
 }
 
 .uploaded-files-text {
