--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -2,6 +2,9 @@
 @import "includes/file-upload";
 @import "includes/multiple-upload";
 
+
+// COLORS
+
 $gideon-logo-yellow: #eed77a;
 $gideon-dark-blue: #31ace2;
 $gideon-light-blue: #6cc1e9;
@@ -20,3 +23,15 @@ $gideon-grey-two:#f6f7f8;
 $gideon-semidark-grey: #979797;
 $gideon-silver-two: #c3ccd0;
 $gideon-light-border-color: #e6eaee;
+$gideon-black: #262626;
+
+
+// SIZES
+
+$gideon-node-width-fullscreen: 31vw;
+$gideon-node-width: 68%;
+
+
+// EFFECTS
+
+$gideon-shadow: -3px 0px 8px rgba(0, 0, 0, 0.12);
