--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -1,59 +1,340 @@
-$gd_dark_sky_blue: #31ace2;
+$gd_gideon_blue: #3F6DE1;
 
-.file-upload-title{
-    background-color: $gd_dark_sky_blue;
-    font-size: 14px;
-    font-weight: bold;
-    max-width: 250px;
-    text-align: center;
-    color: #ffffff;
-    padding: 17px 5px 20px;
-    border-top-left-radius: 13px;
+.background{
+ 
+  /* Gideon / White */
+
+  background: #FEFEFE;
+  /* Gideon / Box shadow */
+
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 3px 3px 0px 3px;
 }
 
-.file-upload-title + div{
-    border: 1px dashed $gd_dark_sky_blue !important;
-    margin: 14px;
-    display: flex;    
-    align-items: center;    
-    justify-content: center;
-    
+.file-upload-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.04em;
+  color: #262626;
 }
+
+.file-upload-box {
+  flex: 1;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #F7F7F7;
+  border: 1.5px dashed #EBEBEB;
+  border-radius: 5px;
+  color:#262626;
+  outline: none;
+  padding: 30px;
+}
+
+.file-upload-icon {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.file-upload-choose-file {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center; 
+  width: 100%;
+}
+
+.file-upload-choose-file-subtext {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center; 
+}
+
+.file-upload-supported-files {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #979797;
+  margin-top: 10px;
+}
+
+.uploaded-files-container {
+  padding: 20px 0px 0px;
+  margin-bottom: 18px;
+}
+
+.uploaded-file-name-readonly {
+  margin-top: 20px;
+  color: #262626;
+}
+
+.uploaded-file-name-readonly-link {
+  margin-top: 20px;
+  color: blue !important;
+  text-decoration: underline;
+}
+
+.uploaded-files-text {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: #262626;
+}
+
+.listed-file {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 17px;
+}
+
+.listed-file:hover {
+  background-color: rgba(63, 109, 225, 0.2);
+  border-radius: 3px;
+  padding: 2px 5px 2px 2px;
+}
+
+.uploaded-file-name {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #262626;
+}
+
+.remove-uploaded-file {
+  color: #3F6DE1;
+}
+
+.remove-uploaded-file:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+// .file-upload-title{
+//     background-color: $gd_gideon_blue;
+//     font-size: 14px;
+//     font-weight: bold;
+//     max-width: 250px;
+//     text-align: center;
+//     color: #ffffff;
+//     padding: 17px 5px 20px;
+//     border-top-left-radius: 13px;
+// }
+
+// .file-upload-title + div{
+//     border: 1px dashed $gd_gideon_blue !important;
+//     margin: 14px;
+//     display: flex;    
+//     align-items: center;    
+//     justify-content: center;
 
 .wc-message-from-me{
     &.wc-message-file{
         .wc-message-content {
-            background-color: transparent;
-            border: 1px solid $gd_dark_sky_blue;
-            padding: 0px;
+          // width: 447px;
+         
+           /* Gideon / White */
+        
+           background: #FEFEFE;
+
+          background-color: transparent;
+          border: 1px solid $gd_gideon_blue;
+          padding: 0px;
         }
     }
 } 
 
+.add-rectangle {
+  width: 447px;
+  height: 5px;
+  
+
+ /* Gideon / Primary color */
+
+ background: #3F6DE1;
+ border-radius: 3px 0px 0px 0px;
+}
+
 .drop-text {    
-    color: $gd_dark_sky_blue;
-    text-align: center;
-    width: 200px;
-    word-wrap: break-word;
+  position: center;
+  box-sizing: border-box;
+  width: 387px;
+  height: 181px;
+  
+  
+  /* Gideon/Form bg */
+  
+  background: #F7F7F7;
+  /* Gideon/Form border */
+  
+  border: 1.5px dashed #EBEBEB;
+  border-radius: 5px;
+  color: $gd_gideon_blue;
+  text-align: center;
+  width: 200px;
+  word-wrap: break-word;
 }
 
 .bold-line{
-    font-weight: 600;
+  width: 385.72px;
+  height: 48px;
+  position: center;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  
+  color: #262626;
+  
+}
+
+.supported-files{
+  width: 385.72px;
+  height: 28px;
+  font-family: 'Lato';
+  font-style: normal; 
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #979797;
+
 }
 
 .upload-skip {
-    color: $gd_dark_sky_blue;
-    text-align: center;
-    padding: 14px 0px;
-    border-top: 1px solid $gd_dark_sky_blue;
-    cursor: pointer;
-    font-weight: 600;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 14px 0px;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 20px;
+  background-color: white;
+  border: 1.5px solid $gd_gideon_blue;
+  color: $gd_gideon_blue;
+}
+
+.upload-skip:hover {
+  background-color: $gd_gideon_blue;
+  border: 1.5px solid $gd_gideon_blue;
+  color: white;
+}
+
+.uploaded-files {
+  width: 211px;
+  height: 17px;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+
+  /* Gideon/Primary text */
+
+  color: #262626;
+
+}
+
+.upload-submit {
+  width: 387px;
+  height: 52px;
+  left: 1747px;
+  top: 798px;
+
+/* Gideon / Primary color */
+
+  background: #3F6DE1;
+  border-radius: 3px;
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+/* Gideon / White */
+
+  color: #FEFEFE;
+}
+
+.upload-header {
+  width: 105px;
+  height: 19px;
+
+
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+
+  /* Gideon/Primary text */
+
+  color: #262626;
+}
+
+.send-icon {
+
+  width: 17px;
+  height: 17.33px;
+  left: 1988px;
+  top: 815.33px;
+
+  /* Gideon / White */
+
+  background: #FEFEFE;
+  opacity: 0.88;
+}
+
+.upload-icon {
+  width: 30px;
+  left: 1926px;
+  top: 34.59%;
+  bottom: 63.47%;
+
+  /* Gideon / Primary color */
+
+   background: #3F6DE1;
+
 }
 
 .fileAttach{
-    background-image: url("https://cdn1.imggmi.com/uploads/2018/10/15/7c7174a92ae80437fb8e996a7889dfc3-full.png");  
-    min-width: 60px;
-    min-height: 70px;  
+    width: 387px;
+    height: 181px;
+     
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -61,10 +342,15 @@ $gd_dark_sky_blue: #31ace2;
 }
 
 a.remove_link{
-    color: $gd_dark_sky_blue;
-    text-decoration: underline;
-    font-size: 14px;
-    
+  width: 13px;
+  left: 2121px;
+  top: 47.6%;
+  bottom: 51.55%;
+/* Gideon / Primary color */
+  border: 3px solid #3F6DE1;
+  color: $gd_gideon_blue;
+  text-decoration: underline;
+  font-size: 14px; 
 }
 
 .add-padding{
@@ -75,7 +361,7 @@ div.no-border{
     border: none !important;
 }
 
-  .wc-app {
+  // .wc-app {
 /** Spinner CSS**/
 /* Absolute CSS Spinner */
 /*
@@ -146,7 +432,7 @@ div.no-border{
     top: 50%;
     left: 50%;
   }
-}
+
   
   /* Animation */
   
