--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -168,6 +168,38 @@
         }
     }
 
+    //working here now
+    .wc-back-button {
+        bottom: 0;
+        box-sizing: border-box;
+        background: white;
+        height: $consoleHeight;
+        max-width: $chatWidth;
+        left: 0;
+        // width: 66%;
+        position: absolute;
+        right: 0;
+        transition: background-color .4s;
+
+        .wc-backbutton{
+            box-sizing: border-box;
+            position: absolute;
+            width: 94px;
+            height: 56px;
+            margin-top: 19px; 
+            margin-left: 20px;
+            display: inline-block; // maybe 
+            visibility: visible !important;
+            background: #F8F8F8 !important;
+            border: 2px solid #F8F8F8 !important;
+            border-radius: 2px;
+            cursor: pointer;
+        }
+        &__disabled {
+            visibility: hidden;
+        }
+    }
+
     .wc-header-fullscreen {
         max-width: 100%;
     }
@@ -1604,16 +1636,24 @@
             fill: #3f6de1;
             margin-right: 16px;
         }
-        
-        //working here
-        .wc-backbutton {
-            margin-top: 19px; 
-            margin-left: 20px;
-            display: inline-block; // maybe 
-            visibility: visible !important;
-            cursor: pointer;
-        }
-        
+
+        // .wc-backbutton{
+        //     box-sizing: border-box;
+        //     position: absolute;
+        //     width: 94px;
+        //     height: 56px;
+        //     margin-top: 19px; 
+        //     margin-left: 20px;
+        //     display: inline-block; // maybe 
+        //     visibility: visible !important;
+        //     background: #F8F8F8 !important;
+        //     border: 2px solid #F8F8F8 !important;
+        //     border-radius: 2px;
+        // }
+        // &__disabled {
+        //     visibility: hidden;
+        // }
+
         input[type=text],
         textarea {
             border: none;
