small change to test backbutton postion

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1620,7 +1620,8 @@
         > .wc-upload,
         > .wc-textbox,
         > .wc-send,
-        > .wc-mic {
+        > .wc-mic,
+        > .wc-back-button {
             position: absolute;
             vertical-align: middle;
         }
