--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -194,6 +194,7 @@
             background: #F8F8F8 !important;
             border: 2px solid #F8F8F8 !important;
             border-radius: 2px;
+            cursor: pointer;
         }
 
         &__disabled {
