--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -190,7 +190,7 @@
             margin-top: 19px; 
             margin-left: 20px;
             display: inline-block; // maybe 
-            visibility: visible !important;
+            //visibility: visible;
             background: #F8F8F8 !important;
             border: 2px solid #F8F8F8 !important;
             border-radius: 2px;
