--- a/src/scss/github-markdown.scss
+++ b/src/scss/github-markdown.scss
@@ -59,6 +59,7 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   line-height: 1.5;
+  color: inherit;
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
