--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -27,6 +27,7 @@ $gideon-light-border-color: #e6eaee;
 $gideon-black: #262626;
 $gideon-dark-blue: #3F6DE1;
 $gideon-hover-blue: #EDF2FF;
+$gideon-history-grey: #edf2ff;
 
 
 // SIZES
