--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -297,6 +297,7 @@
     }
 
     .wc-message-groups-fullscreen {
+        bottom: $consoleHeight;
         max-width: 100%;
         margin-left: 10px;
     }
