--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2024,8 +2024,6 @@ $lato: Lato, sans-serif;
     }
 
     .conversation__history {
-        margin: 0 10px;
-      
         span {
             color: $gideon-gray;
         }
@@ -2035,7 +2033,7 @@ $lato: Lato, sans-serif;
         width: 100%;
         color: $gideon-gray;
         font-size: 14px;
-        padding: 15px !important;
+        padding: 15px 25px !important;
         cursor: pointer;
         flex-direction: column;
         align-items: stretch;
