--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1963,6 +1963,17 @@ $lato: Lato, sans-serif;
         object-fit: contain;
     }
 
+    .gideon-image-center {
+        min-height: 32px;
+        height: auto;
+        width: 100%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+
+    }
+
     .gideon-submit-button {
         background-color: #3F6DE1;
         border: 1px solid #3F6DE1;
@@ -1979,10 +1990,10 @@ $lato: Lato, sans-serif;
     }
 
     .gideon-submit-button-white {
-        background-color: #ffffff;
-        border: 1px solid #3F6DE1;
+        background-color: #ffffff !important;
+        border: 1px solid  #3F6DE1 !important;
         border-radius: 3px !important;
-        color:#3F6DE1;
+        color:#3F6DE1 !important;
         min-height: 32px;
         height: auto;
         width: 100%;
