--- a/src/scss/esign.scss
+++ b/src/scss/esign.scss
@@ -12,13 +12,15 @@ $gd_gideon_blue: #3F6DE1;
 }
 
 .signature-image-box {
-  flex: 1;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  outline: none;
-  padding: 30px;
+    min-height: 32px;
+    height: auto;
+    width: 100%;
+    white-space: normal;
+    overflow-wrap: break-word;
+    padding: 18px;
+    text-align: center;
+    display: block;
+    margin: auto;
 }
 
   /* Animation */
