--- a/src/scss/esign.scss
+++ b/src/scss/esign.scss
@@ -23,6 +23,61 @@ $gd_gideon_blue: #3F6DE1;
     margin: auto;
 }
 
+.esign-message-handoff {
+    position: absolute;
+    width: 452px;
+    height: 22px;
+    left: 39px;
+    top: 351px;
+
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+/* identical to box height */
+   text-align: center;
+   letter-spacing: 0.04em;
+
+/* Gideon/Primary text */
+   color: #262626;
+}
+
+.signature-box-area {
+    text-align: center !important;
+    height: auto;
+        width: 100%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+
+}
+
+.esign-input-box {
+    display: block !important;
+    margin: 0 auto !important;
+    position: auto;
+    height: auto;
+    width: 100%;
+    white-space: normal;
+    overflow-wrap: break-word;
+    padding: 18px;
+    text-align: center !important;
+    
+box-sizing: border-box;
+
+//position: absolute;
+//width: 511px;
+//height: 50px;
+left: 10px;
+top: 630px;
+
+background: #FEFEFE;
+border: 1px solid #DCDCDC;
+
+
+}
+
   /* Animation */
   
   @-webkit-keyframes spinner {
