--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -2188,3 +2188,99 @@ $lato: Lato, sans-serif;
           }
         }
       }
+
+      .signature-image-box {
+        min-height: 32px;
+        height: auto;
+        width: 100%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        text-align: center;
+        display: block;
+        margin: auto;
+    }
+    
+    .esign-message-handoff {
+        position: absolute;
+        width: 452px;
+        height: 22px;
+        left: 39px;
+        top: 351px;
+    
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 22px;
+        /* identical to box height */
+       text-align: center;
+       letter-spacing: 0.04em;
+    
+       /* Gideon/Primary text */
+       color: #262626;
+    }
+    
+    .signature-box-area {
+        text-align: center !important;
+        height: auto;
+            width: 100%;
+            white-space: normal;
+            overflow-wrap: break-word;
+            padding: 18px;
+    
+    }
+    
+    .esign-input-box {
+        
+        height: auto;
+        width: 100%;
+        white-space: normal;
+        overflow-wrap: break-word;
+        padding: 18px;
+        
+        box-sizing: border-box;
+    
+        
+        //width: 511px;
+        //height: 50px;
+        background: #FEFEFE;
+        border: 1px solid #DCDCDC;
+    }
+    
+    .esign-grey-text {
+        
+       
+    
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 17px;
+        /* identical to box height */
+    
+        display: flex;
+        align-items: center;
+        text-align: center;
+    
+        color: #727272 !important;
+    }
+    
+    .esign-black-text{
+        
+        
+    
+        font-family: 'Lato';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 17px;
+        /* identical to box height */
+    
+        display: flex;
+        align-items: center;
+        text-align: center;
+    
+        color: #000000 !important;
+    
+    }
