--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -917,6 +917,11 @@ $lato: Lato, sans-serif;
             padding: 5px 0px 0px 0px;
         }
 
+        .esign__node {
+            background-color: white;
+            color: $gideon-black;
+            padding: none;
+        }
 
         .gideon__node {
             background-color: white;
