--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -919,9 +919,11 @@ $lato: Lato, sans-serif;
 
         .esign__node {
             background-color: white;
+            width: 100% ;
             color: $gideon-black;
             padding: none;
         }
+
 
         .gideon__node {
             background-color: white;
